# sov

./: .gitignore  Cargo.toml  README.md  flake.nix
.config/flakebox/: id  shellHook.sh
sov/: Cargo.toml
sov/src/: config.rs  db.rs  db.sql  error.rs  lib.rs  lsp.rs  note.rs
sov_cli/: Cargo.toml
sov_cli/src/: args.rs  main.rs
sov_core/: Cargo.toml
sov_core/src/: config.rs  db.rs  db.sql  error.rs  lib.rs  note.rs
sov_lsp/: Cargo.toml
sov_lsp/src/: main.rs
