[package]
name = "sov"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.35"
dashmap = "5.5.3"
dirs = "5.0.1"
ropey = "1.6.1"
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.11"
tower-lsp = "0.20.0"
tracing = "0.1.40"
walkdir = "2.5.0"
